<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/taskInfoLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="15dp"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical"
    android:padding="10dp">>

    <TextView
        android:id="@+id/taskNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/tLName"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/taskDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/tLDate"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/taskTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/tLTime"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/taskDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/tLDes"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/actionBtnlayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startTBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/startAction"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/blue"
            android:text="@string/updateAction"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/deleteAction"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
