<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTask">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/createCl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/createTaskLay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/navBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/createTaskL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue">

                <TextView
                    android:id="@+id/createTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/Create_task"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:text="@string/tName"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/taskNameIn"
                    app:layout_constraintTop_toBottomOf="@+id/createTask" />

                <EditText
                    android:id="@+id/taskNameIn"
                    android:layout_width="274dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/hintName"
                    android:textColorHint="@color/hintTextColor"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/tDate"
                    app:layout_constraintTop_toBottomOf="@+id/tName" />

                <TextView
                    android:id="@+id/tDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/taskDateIn"
                    app:layout_constraintStart_toStartOf="@+id/taskDateIn"
                    app:layout_constraintTop_toBottomOf="@+id/taskNameIn" />

                <EditText
                    android:id="@+id/taskDateIn"
                    android:layout_width="274dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:hint="@string/hintDate"
                    android:textColorHint="@color/hintTextColor"
                    app:layout_constraintStart_toStartOf="@+id/taskTime"
                    app:layout_constraintTop_toBottomOf="@+id/tDate" />

                <TextView
                    android:id="@+id/taskTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/expectTime"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/tasktimeIn"
                    app:layout_constraintTop_toBottomOf="@+id/taskDateIn" />

                <EditText
                    android:id="@+id/tasktimeIn"
                    android:layout_width="274dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="time"
                    android:textColor="@color/black"
                    android:hint="@string/hintHours"
                    android:textColorHint="@color/hintTextColor"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/taskDes"
                    app:layout_constraintTop_toBottomOf="@+id/taskTime" />

                <TextView
                    android:id="@+id/taskDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/taskDes"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/taskDesIn"
                    app:layout_constraintTop_toBottomOf="@+id/tasktimeIn" />

                <EditText
                    android:id="@+id/taskDesIn"
                    android:layout_width="274dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="67dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/taskDes" />

                <Button
                    android:id="@+id/createTaskBtn"
                    android:layout_width="252dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="71dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/Create_task"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/taskDesIn" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/navBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/design_default_color_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/navHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/design_default_color_background"
                android:contentDescription="@string/home"
                android:padding="11dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/home" />

            <ImageButton
                android:id="@+id/navPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/design_default_color_background"
                android:contentDescription="@string/plus"
                android:padding="11dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/plus" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>