<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ActionPage">

    <ImageView
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="280dp"
        app:layout_constraintBottom_toTopOf="@+id/actionPagecl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionPagecl"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/doThis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adlam_display"
                android:padding="15dp"
                android:text="@string/doThis"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/taskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/tName"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/taskDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/taskTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/expectTime"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/taskDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/taskDes"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/timer_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:text="@string/iniTimer"
                android:textColor="@color/black"
                android:textSize="48sp" />

            <LinearLayout
                android:id="@+id/actionIconLayout"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/timerStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    app:srcCompat="@drawable/baseline_play_circle_24" />

                <ImageButton
                    android:id="@+id/timerStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    app:srcCompat="@drawable/baseline_pause_circle_24" />

                <ImageButton
                    android:id="@+id/timerReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    app:srcCompat="@drawable/baseline_restart_alt_24" />

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>