<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateTask">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/updatePgCl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/navBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/updateTaskLay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/navBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/updateTaskL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue">

                <TextView
                    android:id="@+id/updateTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/updateTopic"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/taskDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/taskDes"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/updatetaskDesIn"
                    app:layout_constraintTop_toBottomOf="@+id/updatetasktimeIn" />

                <TextView
                    android:id="@+id/tName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:text="@string/tName"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/updatetaskNameIn"
                    app:layout_constraintTop_toBottomOf="@+id/updateTask" />

                <EditText
                    android:id="@+id/updatetaskNameIn"
                    android:layout_width="274dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="Name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/tDate"
                    app:layout_constraintTop_toBottomOf="@+id/tName" />

                <TextView
                    android:id="@+id/tDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/updatetaskDateIn"
                    app:layout_constraintTop_toBottomOf="@+id/updatetaskNameIn" />

                <EditText
                    android:id="@+id/updatetaskDateIn"
                    android:layout_width="274dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/taskTime"
                    app:layout_constraintTop_toBottomOf="@+id/tDate" />

                <TextView
                    android:id="@+id/taskTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/expectTime"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/updatetasktimeIn"
                    app:layout_constraintTop_toBottomOf="@+id/updatetaskDateIn" />

                <EditText
                    android:id="@+id/updatetasktimeIn"
                    android:layout_width="274dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="time"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/taskDes"
                    app:layout_constraintTop_toBottomOf="@+id/taskTime" />

                <EditText
                    android:id="@+id/updatetaskDesIn"
                    android:layout_width="274dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="63dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/taskDes" />

                <Button
                    android:id="@+id/updateTaskBtn"
                    android:layout_width="252dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="71dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/updateBtn"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/updatetaskDesIn" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/navBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/design_default_color_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/navHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/design_default_color_background"
                android:contentDescription="@string/home"
                android:padding="11dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/home" />

            <ImageButton
                android:id="@+id/navPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/design_default_color_background"
                android:contentDescription="@string/plus"
                android:padding="11dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/plus" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>